Closed Bug 374486 Opened 17 years ago Closed 17 years ago

"WARNING: Nonempty list left over?" in visual debugging mode

Categories

(Core :: Web Painting, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: sylvain.pasche, Assigned: sylvain.pasche)

Details

Attachments

(1 file)

Attached patch v1Splinter Review
as nsDisplayList::AppendToTop(nsDisplayList*) is clearing the list in argument, I get better results when calling it after DisplayDebugBorders.
Attachment #259010 - Flags: review?(roc)
Whiteboard: [checkin needed]
Could someone check this in please? Thanks
Assignee: roc → sylvain.pasche
mozilla/layout/generic/nsFrame.cpp  3.715
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → mozilla1.9alpha4
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: