Bug 374486 - "WARNING: Nonempty list left over?" in visual debugging mode p=Sylvain Pasche <sylvain.pasche@gmail.com>r+sr=roc